# FLAIM

./: INSTALL  Makefile.am  README  README.W32  README.md  configure.ac
flaim/obs/: Makefile.am  flaim.spec.in
flaim/src/: Makefile.am  checksum.cpp  f_nici.cpp  f_nici.h  fblob.cpp  fcs.cpp  fcs.h  fdb.cpp  fdbcnfig.cpp  fdbcopy.cpp  fdbremov.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  ffilehdr.cpp  fgedcom.cpp  filesys.h  flaim.h  flaimsys.h  flbackup.cpp  flchkdb.cpp  flclose.cpp  flconvrt.cpp  flcreate.cpp  fldbglog.cpp  flerror.cpp  flindex.cpp  flkeyret.cpp  flmimon.cpp  flmimon.h  flmstat.cpp  flmstat.h  flopen.cpp  flrddrct.cpp  flreduce.cpp  flsweep.cpp  flupdate.cpp  flverify.cpp  fmisc.cpp  fntable.cpp  (+76 more)
flaim/util/: Makefile.am  basic_test.cpp  checkdb.cpp  dbshell.cpp  dbshell.h  flm_dlst.cpp  flm_dlst.h  flm_edit.cpp  flm_edit.h  flm_lutl.cpp  flm_lutl.h  flmarg.h  flmunittest.cpp  flmunittest.h  gigatest.cpp  gigatest.h  ha_flaim.cpp  ha_flaim.h  rebuild.cpp  rflread.cpp  rflread.h  sharutil.cpp  sharutil.h  view.cpp  view.h  viewblk.cpp  viewdisp.cpp  viewedit.cpp  viewfhdr.cpp  viewlfil.cpp  viewlhdr.cpp  viewmenu.cpp  viewrfl.cpp  viewsrch.cpp
ftk/: COPYING  GNUMakefile  Makefile.am  NEWS  README  README.W32  configure.ac
ftk/debian/: ChangeLog.ubuntu  rules
ftk/docs/: Makefile.am  README  doxyfile.in
ftk/obs/: README  flaimtk.spec.in
ftk/src/: Makefile.am  flaimtk.h  ftkarg.cpp  ftkbtree.cpp  ftkcmem.cpp  ftkcoll.cpp  ftkcsum.cpp  ftkdir.cpp  ftkdynbtree.cpp  ftkdynrset.cpp  ftkdynrset.h  ftkerror.cpp  ftkfsys.cpp  ftkftx.cpp  ftkhttp.cpp  ftkini.cpp  ftkiobuf.cpp  ftklock.cpp  ftklog.cpp  ftkmem.cpp  ftkmfh.cpp  ftkmisc.cpp  ftknet.cpp  ftknlm.cpp  ftknlm.h  ftkntab.cpp  ftkprntf.cpp  ftkrand.cpp  ftkrset.cpp  ftksem.cpp  ftkstrm.cpp  ftksupr.cpp  ftksys.h  ftktext.cpp  ftkthrd.cpp  ftktime.cpp  ftkunix.cpp  ftkwin.cpp  ftkxml.cpp  libflaimtk.pc.in
ftk/util/: Makefile.am  ftktest.cpp
ftk/win32/ftk/: build.cmd  ftk.sln
ftk/win32/ftk/flaimtk/: flaimtk.vcproj
ftk/win32/ftk/flaimtk_static/: flaimtk_static.vcproj
ftk/win32/ftk/ftktest/: ftktest.vcproj
sql/src/: Makefile.am  btreeinfo.cpp  checksum.cpp  createdatabase.cpp  createindex.cpp  createtable.cpp  deleterow.cpp  dropdatabase.cpp  dropindex.cpp  droptable.cpp  f_btpool.cpp  f_btpool.h  f_btree.cpp  f_btree.h  f_nici.cpp  f_nici.h  fbtrset.cpp  fbtrset.h  fcache.h  fcollate.cpp  fdbcnfig.cpp  fdbcopy.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  fdllmain.cpp  fdynbuf.cpp  fdynbuf.h  ffilehdr.cpp  filesys.h  flaimsql.h  flaimsys.h  flbackup.cpp  flclose.cpp  flconvrt.cpp  fldbglog.cpp  flerror.cpp  flgethdr.cpp  flindex.cpp  flkeyret.cpp  (+44 more)
xflaim/: AUTHORS  COPYING  ChangeLog  GNUMakefile  INSTALL  Makefile.am  NEWS  README  README.W32  configure.ac
xflaim/debian/: ChangeLog.ubuntu  control  rules
xflaim/docs/: Makefile.am  XFLAIMArchitecture.odg
xflaim/docs/doxygen/: Makefile.am  doxyfile.in
xflaim/m4/: flm_prog_try_csc.m4  flm_prog_try_csvm.m4  flm_prog_try_doxygen.m4  flm_prog_try_jar.m4  flm_prog_try_java.m4  flm_prog_try_javac.m4  flm_prog_try_javadoc.m4  flm_prog_try_javah.m4  flm_prog_try_jni.m4
xflaim/obs/: Makefile.am  xflaim.spec.in
xflaim/sample/: Makefile.am  sample.cpp
xflaim/sample/xmlfiles/: 70028663.xml  70037c08.xml  70045109.xml  70046709.xml  7004920a.xml
xflaim/src/: Makefile.am  btreeinfo.cpp  f_btpool.cpp  f_btree.cpp  f_btree.h  f_ccs.cpp  f_ccs.h  f_nici.cpp  fbtrset.cpp  fbtrset.h  fcache.h  fcollate.cpp  fcollate.h  fdbcnfig.cpp  fdbcopy.cpp  fdbremov.cpp  fdbrenam.cpp  fdict.cpp  fdict.h  fdllmain.cpp  fdoclist.cpp  fdom.cpp  ffilehdr.cpp  filesys.h  flaimsys.h  flbackup.cpp  flblddb.cpp  flchkdb.cpp  flchkix.cpp  flchktr.cpp  flclose.cpp  flconvrt.cpp  flcreate.cpp  fldbglog.cpp  flerror.cpp  flindex.cpp  flkeyret.cpp  flmstat.cpp  flmstat.h  flog.cpp  (+44 more)
xflaim/src/cs/: Backup.cpp  DOMNode.cpp  DataVector.cpp  Db.cpp  DbInfo.cpp  DbSystem.cpp  DbSystemStats.cpp  IStream.cpp  Makefile.am  OStream.cpp  Query.cpp
xflaim/src/cs/wrapper/: Makefile.am  xflaim.ndoc
xflaim/src/cs/wrapper/xflaim/: Db.cs  (+19 more)
xflaim/src/java/: Makefile.am  jbackup.cpp  jdatavector.cpp  jdb.cpp  jdbsystem.cpp  jdomnode.cpp  jistream.cpp  jniftk.cpp  jniftk.h  jnirestore.cpp  jnirestore.h  jnistatus.cpp  jnistatus.h  jostream.cpp  jquery.cpp
xflaim/src/java/wrapper/: Makefile.am  xflaimjni.mf
xflaim/util/: Makefile.am  basictestsrv.cpp  binarytest.cpp  checkdb.cpp  colldeftestsrv.cpp  dbdiff.cpp  dbdiff.h  dictchangetest.cpp  dictdeftestsrv.cpp  diffbackups.cpp  dirtyexittest1srv.cpp  dirtyexittest2srv.cpp  domedit.cpp  domedit.h  domnodetestsrv.cpp  enctestsrv.cpp  fdomedt.cpp  flm_dlst.cpp  flm_dlst.h  flm_lutl.cpp  flm_lutl.h  flmunittest.cpp  flmunittest.h  fshell.cpp  fshell.h  importtestsrv.cpp  indexdeftestsrv.cpp  indextest1srv.cpp  indextest2srv.cpp  indextest3.cpp  metaphonetestsrv.cpp  namespacetestsrv.cpp  rebuild.cpp  regressiontest.cpp  rfltestsrv.cpp  sharutil.cpp  sharutil.h  sortkeytest.cpp  sortkeytest2.cpp  view.cpp  (+11 more)
xflaim/util/xmlfiles/: 00097210.xml  7001e10c.xml  70031709.xml  70040b08.xml  70044808.xml  70045e09.xml  7004bb09.xml  7004bf0a.xml  7004c609.xml  7004df09.xml  7004e70c.xml  7004f60a.xml  7004f809.xml  7005010a.xml  70050608.xml  70050b0a.xml  70052008.xml  70052a0a.xml  70052c0b.xml  70053308.xml  70054b0b.xml  7005530a.xml  70056409.xml  7005640a.xml  7005780a.xml  70057a0a.xml  70059408.xml  7005960a.xml  70059908.xml  70059b0a.xml  70059d08.xml  7005a10a.xml  7005a209.xml  7005a90a.xml  7005b308.xml  7005b90a.xml  7005c10b.xml  7005c30a.xml  7005c60b.xml  7005c909.xml  (+77 more)
xflaim/util/xmlfiles/dictionary/: titlevalueix.xml  tracksubstrix.xml
xflaim/win32/xflaim/: build.cmd  xflaim.sln
xflaim/win32/xflaim/xflaim/: xflaim.vcproj
xflaim/win32/xflaim/xflaim_static/: xflaim_static.vcproj
xflaim/win32/xflaim/xflmcheckdb/: xflmcheckdb.vcproj
xflaim/win32/xflaim/xflmdbshell/: xflmdbshell.vcproj
xflaim/win32/xflaim/xflmrebuild/: xflmrebuild.vcproj
xflaim/win32/xflaim/xflmutil/: xflmutil.vcproj
xflaim/win32/xflaim/xflmview/: xflmview.vcproj
(+178 files in other folders)
