lib_LTLIBRARIES = libflaim.la
include_HEADERS = flaim.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libflaim.pc

libflaim_la_SOURCES = \
 checksum.cpp \
 fblob.cpp \
 fcs.cpp \
 fcs.h \
 fdbcnfig.cpp \
 fdbcopy.cpp \
 fdb.cpp \
 fdbremov.cpp \
 fdbrenam.cpp \
 fdict.cpp \
 fdict.h \
 ffilehdr.cpp \
 fgedcom.cpp \
 filesys.h \
 flaimsys.h \
 flbackup.cpp \
 flchkdb.cpp \
 flclose.cpp \
 flconvrt.cpp \
 flcreate.cpp \
 fldbglog.cpp \
 flerror.cpp \
 flindex.cpp \
 flkeyret.cpp \
 flmimon.cpp \
 flmimon.h \
 flmstat.cpp \
 flmstat.h \
 flopen.cpp \
 flrddrct.cpp \
 flreduce.cpp \
 flsweep.cpp \
 flupdate.cpp \
 flverify.cpp \
 fmisc.cpp \
 f_nici.cpp \
 f_nici.h \
 fntable.cpp \
 fnumber.cpp \
 fpackoff.h \
 fpackon.h \
 fqcur.cpp \
 fqdecl.cpp \
 fqeval.cpp \
 fqget.cpp \
 fqkeys.cpp \
 fqlog.cpp \
 fqopt.cpp \
 fqparse.cpp \
 fqprep.cpp \
 fqread.cpp \
 fqsrch.cpp \
 fqstack.cpp \
 fquery.h \
 frebuild.cpp \
 frec.cpp \
 frecset.cpp \
 fsblk_u.cpp \
 fscomblk.cpp \
 fsconvrt.cpp \
 fscounts.cpp \
 fscursor.cpp \
 fscursor.h \
 fsdatacu.cpp \
 fsdelelm.cpp \
 fsinselm.cpp \
 fslfile.cpp \
 fslfileu.cpp \
 fsnext.cpp \
 fsprev.cpp \
 fsrecget.cpp \
 fsrecupd.cpp \
 fsrefspl.cpp \
 fsrefupd.cpp \
 fssearch.cpp \
 fssplblk.cpp \
 fstructs.h \
 fsv.cpp \
 fsv.h \
 fsysdata.cpp \
 ftext.cpp \
 ftrans.cpp \
 furl.cpp \
 furl.h \
 imonbase.cpp \
 imonchk.cpp \
 imonerr.cpp \
 imonfact.cpp \
 imonfdb.cpp \
 imonffil.cpp \
 imonfhsh.cpp \
 imonfram.cpp \
 imonfsys.cpp \
 imonix.cpp \
 imonlhdr.cpp \
 imonqury.cpp \
 imonrche.cpp \
 imonrec.cpp \
 imonscfg.cpp \
 imonsche.cpp \
 imonsel.cpp \
 imonstat.cpp \
 imonutil.cpp \
 kybuild.cpp \
 kycollat.cpp \
 kyget.cpp \
 lock.cpp \
 rcache.cpp \
 recover.cpp \
 rfl.cpp \
 rfl.h \
 scache.cpp \
 translog.cpp

libflaim_la_CPPFLAGS = $(FTK_INCLUDE)
libflaim_la_LIBADD = $(FTK_LTLIB)
libflaim_la_LDFLAGS = -version-info 5:2:0
