EXTRA_DIST = ftknlm.h

lib_LTLIBRARIES = libflaimtk.la
include_HEADERS = flaimtk.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libflaimtk.pc

libflaimtk_la_SOURCES = \
 ftkarg.cpp \
 ftkbtree.cpp \
 ftkcmem.cpp \
 ftkcoll.cpp \
 ftkcsum.cpp \
 ftkdir.cpp \
 ftkdynbtree.cpp \
 ftkdynrset.cpp \
 ftkdynrset.h \
 ftkerror.cpp \
 ftkfsys.cpp \
 ftkftx.cpp \
 ftkhttp.cpp \
 ftkini.cpp \
 ftkiobuf.cpp \
 ftklock.cpp \
 ftklog.cpp \
 ftkmem.cpp \
 ftkmfh.cpp \
 ftkmisc.cpp \
 ftknet.cpp \
 ftknlm.cpp \
 ftkntab.cpp \
 ftkprntf.cpp \
 ftkrand.cpp \
 ftkrset.cpp \
 ftksem.cpp \
 ftkstrm.cpp \
 ftksupr.cpp \
 ftktext.cpp \
 ftkthrd.cpp \
 ftktime.cpp \
 ftksys.h \
 ftkunix.cpp \
 ftkwin.cpp \
 ftkxml.cpp

libflaimtk_la_LDFLAGS = -version-info 0:0:0
